[package]
name = "orb"
version = "0.1.0"
authors = ["Kristaps Dz <kristaps@bsd.lv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = "0.22.1"
rusqlite = "0.25.1"
json = "0.12.4"
bcrypt = "0.10.1"
num-traits = "0.2"
num-derive = "0.3"
